Fixed text clipping on main page for mobile by removing the width: 100% declaration from .main-content in index.css (hopefully!)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -133,7 +133,7 @@ button:focus-visible {
 } */
 
 .main-content {
-  width: 100%;
+  /* width: 100%; */
   max-width: 650px;
   margin: 0 auto;
   text-align: left;
